--- a/src/app/views/styles/settings/normalize.scss
+++ b/src/app/views/styles/settings/normalize.scss
@@ -420,6 +420,7 @@ input[type='number']::-webkit-outer-spin-button {
   border-width: 0;
   border-style: solid;
   scrollbar-width: thin;
+  scrollbar-color: var(--secondary-color-50) var(--primary-color);
 }
 
 :root {
