--- a/src/app/views/styles/settings/settings.scss
+++ b/src/app/views/styles/settings/settings.scss
@@ -76,12 +76,12 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: var(--primary-color-500);
+  background: var(--primary-color);
   opacity: 0.2;
 }
 
 ::-moz-scrollbar-track {
-  background: var(--primary-color-500);
+  background: var(--primary-color);
   opacity: 0.2;
 }
 
